--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>neonquito | letreros neon led</title>
     <link rel="stylesheet" href="estilo.css">
     <script src="https://kit.fontawesome.com/ce1c52079c.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Diseños y creaciones de letreros en neon led para quito y ecuado, letras en neon led, diseños de logos en neon, diseño de nombres en neon">
+    <link rel="shortcut icon" type="image/x-icon" href="neonquito_favico.ico">
 
 </head>
 <body>
