cambios en imagenes y hovers

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="estilo.css">
     <script src="https://kit.fontawesome.com/ce1c52079c.js" crossorigin="anonymous"></script>
     <meta name="description" content="Diseños y creaciones de letreros en neon led para quito y ecuado, letras en neon led, diseños de logos en neon, diseño de nombres en neon">
-    <link rel="shortcut icon" type="image/x-icon" href="neonquito_favico.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="neonquito_favico.png">
+    <link rel="apple-touch-icon" href="neonquito_favico.png">
 
 </head>
 <body>
@@ -21,7 +22,7 @@
 
         <div class="hero">
             <figure class="logoBx">
-                <img class="logo" src="logo_neonquito.png" alt="logo neonquito">
+                <img class="logo" src="./images/identificador-NEON_QUITO2.png" alt="logo neonquito">
             </figure>
             <h1>Letreros en neon led</h1>
             <p>Estamos trabajando para ti. Espera pronto nuevas sorpresas</p>
