--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="estilo.css">
     <script src="https://kit.fontawesome.com/ce1c52079c.js" crossorigin="anonymous"></script>
     <meta name="description" content="Diseños y creaciones de letreros en neon led para quito y ecuado, letras en neon led, diseños de logos en neon, diseño de nombres en neon">
-    <link rel="shortcut icon" type="image/x-icon" href="neonquito_favico.png">
-    <link rel="apple-touch-icon" href="neonquito_favico.png">
+    <link rel="shortcut icon" type="image/x-icon" href="./images/imagotipo-azul-02.png">
+    <link rel="apple-touch-icon" href="./images/imagotipo-azul-02.png">
 
 </head>
 <body>
